# ST-DADK

./: .gitignore  ENV_SETUP.md  GRID_SEARCH_GUIDE.md  Makefile  README.md  debug_model.py  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
configs/: config.yaml  config_conformal_demo.yaml  config_conformal_ratio_0.2.yaml  config_conformal_ratio_0.25.yaml  config_conformal_ratio_0.3.yaml  config_conformal_ratio_0.35.yaml  config_debug.yaml  config_st_interp.yaml  config_st_interp_mq.yaml  config_st_interp_q.yaml  config_stdk.yaml  test_quantile.yaml
data/: description.txt
data/1a/: 1a-solutions.csv  1a_1_test.csv  1a_1_train.csv  1a_2_test.csv  1a_2_train.csv
data/1b/: 1b-solutions.csv  1b_1_test.csv  1b_2_test.csv
data/2a/: 2a_7.csv  2a_7_test_small.csv  2a_7_train_small.csv  2a_8_train.csv  2a_9.csv
data/3a/: 3a-solutions.csv  3a_1_test.csv  3a_1_train.csv  3a_2_test.csv  3a_2_train.csv  3a_3_test.csv  3a_3_train.csv
data/3b/: 3b-solutions.csv  3b_1_test.csv  3b_2_test.csv  3b_3_test.csv
docs/: CRPS_EVALUATION_SETUP.md
envs/: utils.sh
envs/conda/: build_conda_env.sh  conda_env_info.sh  find_conda_env.sh  utils.sh
envs/jupyter/: start_jupyter_lab.sh  utils.sh
outputs/: 2a7_full_ckpt_history.csv  debug_ckpt.pt  debug_ckpt_history.csv
scripts/: README.md  analyze_grid_search.py  analyze_table_4_4.py  compute_coverage.py  create_small_dataset.py  predict_stnf_xattn.py  resume_grid_search.py  run_grid_search.py  run_table_4_4.py  train_st_interp.py  train_stdk_lstm.py  train_stnf_xattn.py  visualize_2b_data.py  visualize_obs_density.py
stnf/: __init__.py
stnf/dataio/: __init__.py  kaust_loader.py
stnf/models/: __init__.py  basis_embedding.py  st_interp.py  stdk_lstm.py  stnf_xattn.py  stnf_xattn_sitewise.py
stnf/utils/: __init__.py  conformal.py  ema.py  metrics.py  seed.py
tests/: __init__.py
tests/stnf/: __init__.py
tests/stnf/models/: __init__.py  test_crps_eq_4_6.py  test_p_nc_delta_penalty.py  test_st_interp_delta_reparameterization.py  test_st_interp_delta_reparameterization_integration.py
